--- a/lib/prototype-admin/clear-data.html
+++ b/lib/prototype-admin/clear-data.html
@@ -9,15 +9,15 @@
   {{ govukBackLink({
       "text": "Back",
       "href": "javascript: window.history.go(-1)"
-    }) 
+    })
   }}
 {% endblock %}
 
 {% block content %}
 
 <form method="post">
-  <div class="govuk-govuk-grid-row">
-    <div class="govuk-grid-govuk-grid-column-two-thirds">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
         Clear data?
       </h1>
